add audio_context.resume() for iOS 11 Safari
add "audio_context.resume();" in function startRecording(button) to support iOS 11 Safari

--- a/examples/example_simple_exportwav.html
+++ b/examples/example_simple_exportwav.html
@@ -46,6 +46,7 @@
   }
 
   function startRecording(button) {
+    audio_context.resume();
     recorder && recorder.record();
     button.disabled = true;
     button.nextElementSibling.disabled = false;
