--- a/examples/example_simple_exportwav.html
+++ b/examples/example_simple_exportwav.html
@@ -93,13 +93,25 @@
       audio_context = new AudioContext;
       __log('Audio context set up.');
       __log('navigator.getUserMedia ' + (navigator.getUserMedia ? 'available.' : 'not present!'));
+      __log('navigator.mediaDevices.getUserMedia ' + (navigator.mediaDevices.getUserMedia ? 'available.' : 'not present!'));
     } catch (e) {
       alert('No web audio support in this browser!');
     }
     
-    navigator.getUserMedia({audio: true}, startUserMedia, function(e) {
-      __log('No live audio input: ' + e);
-    });
+    //navigator.getUserMedia({audio: true}, startUserMedia, function(e) {
+    //  __log('No live audio input: ' + e);
+    //});
+    if (navigator.getUserMedia) {
+      navigator.getUserMedia({audio: true}, startUserMedia, function(e) {
+	__log('No live audio input: ' + e);
+      });
+    } else if (navigator.mediaDevices.getUserMedia) {
+      navigator.mediaDevices.getUserMedia({audio: true}).then(startUserMedia).catch(function(e) {
+	__log('No live audio input: ' + e);
+      });
+    } else {
+	__log('No user media support');
+    }	  
   };
   </script>
 
